--- a/main.css
+++ b/main.css
@@ -1,44 +1,426 @@
 * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+
+html,
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+.initial-sec {
+    background-image: url('https://images.unsplash.com/photo-1496150458551-140441714f2f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80');
+
+}
+
+header {
+    background-color: rgba(0, 0, 0, 0.032);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 50px;
+}
+
+.nav-links ul {
+    list-style: none;
+    color: #f8f8f8;
+    justify-content: space-between;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 0 60px;
+
+}
+
+.nav-links ul li a {
+    color: #fafafa;
+    text-decoration: none;
+}
+
+.nav-links ul li a img {
+    width: 30px;
+    /* Ajusta el tamaño del logo según tus necesidades */
+    height: auto;
+}
+
+
+.nav-links ul li a img:hover {
+    scale: 1.1;
+    cursor: pointer;
+
+}
+
+.nav-links ul li a:hover {
+    color: rgba(255, 157, 0, 0.909);
+    text-decoration: none;
+}
+
+.landing {
+    background-image: url("https://images.unsplash.com/photo-1706585143532-2fb13f5af383?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    display: flex;
+    padding: 30px 50px;
+    height: 600px;
+    gap: 260px;
+    justify-content: space-between;
+}
+
+.landing img {
+    position: relative;
+    width: 2000px;
+    height: 250px;
+}
+
+.landing h1 {
+    color: #fcfcfc;
+    width: 800px;
+}
+
+.landing p {
+    width: 800px;
+    color: rgb(122, 122, 122);
+}
+
+.infolanding {
+    padding: 20px 0px;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.mefoto img {
+    border-radius: 20px;
+    width: 100%;
+    height: auto;
+}
+
+.mefoto:hover {
+    cursor: pointer;
+    scale: 1.03;
+}
+
+
+.section {
+    margin: 160px 104px;
+}
+
+.logo {
+    width: 70px;
+    /* Ajusta el tamaño del logo según tus necesidades */
+    height: auto;
+}
+
+.logo:hover {
+    scale: 1.1;
+    cursor: pointer;
+}
+
+/* CSS */
+.button-58 {
+    align-items: center;
+    background-color: rgba(255, 157, 0, 0.909);
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    fill: rgba(255, 157, 0, 0.909);
+    font-size: 16px;
+    height: 48px;
+    justify-content: center;
+    letter-spacing: -.8px;
+    min-width: 140px;
+    text-align: center;
+    text-decoration: none;
+    transition: all .3s;
+    position: absolute;
+}
+
+.button-58:focus {
+    color: #fafafa;
+}
+
+.button-58:hover {
+    background-color: #f8f8f8;
+    color: rgba(1, 0, 2, 0.909);
+    ;
+}
+
+
+.portafolio {
+    background-image: url('https://images.unsplash.com/photo-1498805983167-a523078d762c?q=80&w=1822&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    gap: 20px 0;
+    padding: 80px 104px;
+}
+
+.portafolio h1 {
+    color: rgb(255, 255, 255);
+}
+
+.projects-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5% 1%;
+}
+
+.project-card {
+    width: 360px;
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.733);
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+}
+
+.project-card:hover {
+    background-color: rgba(255, 157, 0, 0.785);
+    scale: 1.01;
+    cursor: pointer;
+    color: white;
+}
+
+.project-card .deco p {
+    margin: 0;
+}
+
+.project-card img {
+    border-radius: 8px 8px 0 0;
+}
+
+.project-card .project-info-container {
+    padding: 18px 22px;
+}
+
+
+.project-card .project-info-container h3 {
+    font-weight: bold;
+    width: 300px;
+    font-size: 16px;
+    color: black;
+}
+
+.project-card .project-info-container p {
+    font-size: 11px;
+    color: black;
+}
+
+
+@media (min-width: 768px) {
+    .button-58 {
+        display: flex;
+        justify-content: center;
+        min-width: 170px;
     }
-    body {
-      background-color: #f5f5f5;
-      color: #2e2e2e;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      padding: 2rem;
+}
+
+@media screen and (max-width : 430px) {
+    .section {
+        margin: 80px 18px;
     }
-    .container {
-      text-align: center;
-      max-width: 600px;
-      padding: 2rem;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.05);
+}
+
+.portafolio p {
+    width: 1200px;
+    color: rgb(122, 122, 122);
+
+}
+
+
+.separador {
+    padding: 80px 104px;
+    background-image: url(https://images.unsplash.com/photo-1585087891628-dfac2d0fe38c?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    height: 400px;
+}
+
+.separador h1{
+    color: white;
+}
+
+.separador p{
+    width: 1200px;
+    color: rgb(81, 81, 81);
+}
+
+.site-footer {
+    background-color: #000000;
+    padding: 45px 0 20px;
+    font-size: 15px;
+    line-height: 24px;
+    color: #737373;
+}
+
+a{
+    text-decoration: none;
+}
+
+.site-footer hr {
+    border-top-color: #bbb;
+    opacity: 0.5
+}
+
+.site-footer hr.small {
+    margin: 20px 0
+}
+
+.site-footer h6 {
+    width: 500px;
+    color: #fff;
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-top: 5px;
+    letter-spacing: 2px
+}
+
+.site-footer p{
+    width: 550px;
+    color: #737373;
+    font-size: 14px;
+
+
+}
+
+
+.site-footer a {
+    color: #737373;
+}
+
+.site-footer a:hover {
+    color: #3366cc;
+    text-decoration: none;
+}
+
+.footer-links {
+    padding-left: 0;
+    list-style: none
+}
+
+.footer-links li {
+    display: block
+}
+
+.footer-links a {
+    color: #737373
+}
+
+.footer-links a:active,
+.footer-links a:focus,
+.footer-links a:hover {
+    color: #3366cc;
+    text-decoration: none;
+}
+
+.footer-links.inline li {
+    display: inline-block
+}
+
+.site-footer .social-icons {
+    text-align: right
+}
+
+.site-footer .social-icons a {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    margin-left: 6px;
+    margin-right: 0;
+    border-radius: 100%;
+    background-color: #33353d
+}
+
+.copyright-text {
+    margin: 0
+}
+
+@media (max-width:991px) {
+    .site-footer [class^=col-] {
+        margin-bottom: 30px
     }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
+}
+
+@media (max-width:767px) {
+    .site-footer {
+        padding-bottom: 0
     }
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
+
+    .site-footer .copyright-text,
+    .site-footer .social-icons {
+        text-align: center
     }
-    a.button {
-      display: inline-block;
-      padding: 0.8rem 1.6rem;
-      background-color: #5aaf76;
-      color: white;
-      text-decoration: none;
-      font-weight: 600;
-      border-radius: 8px;
-      transition: background-color 0.3s;
+}
+
+.social-icons {
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none
+}
+
+.social-icons li {
+    display: inline-block;
+    margin-bottom: 4px
+}
+
+.social-icons li.title {
+    margin-right: 15px;
+    text-transform: uppercase;
+    color: #96a2b2;
+    font-weight: 700;
+    font-size: 13px
+}
+
+.social-icons a {
+    background-color: #eceeef;
+    color: #818a91;
+    font-size: 16px;
+    display: inline-block;
+    line-height: 44px;
+    width: 44px;
+    height: 44px;
+    text-align: center;
+    margin-right: 8px;
+    border-radius: 100%;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear
+}
+
+.social-icons a:active,
+.social-icons a:focus,
+.social-icons a:hover {
+    color: #fff;
+    background-color: #29aafe
+}
+
+.social-icons.size-sm a {
+    line-height: 34px;
+    height: 34px;
+    width: 34px;
+    font-size: 14px
+}
+
+.social-icons a.facebook:hover {
+    background-color: #3b5998
+}
+
+.social-icons a.twitter:hover {
+    background-color: #00aced
+}
+
+.social-icons a.linkedin:hover {
+    background-color: #007bb6
+}
+
+.social-icons a.dribbble:hover {
+    background-color: #ea4c89
+}
+
+@media (max-width:767px) {
+    .social-icons li.title {
+        display: block;
+        margin-right: 0;
+        font-weight: 600
     }
-    a.button:hover {
-      background-color: #47985f;
-    }
+}
