--- a/main.css
+++ b/main.css
@@ -14,11 +14,16 @@ body {
 }
 
 header {
-    background-color: rgba(0, 0, 0, 0.032);
+    position: fixed;  /* Keeps the header fixed at the top */
+    background-color: rgba(0, 0, 0, 0.3); /* semi-transparent black */
+    color: white;
+    z-index: 1000; /* ensures it stays above other elements */
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 30px 50px;
+    width: 100%;
+    height: 15%;
 }
 
 .nav-links ul {
@@ -51,12 +56,15 @@ header {
 }
 
 .nav-links ul li a:hover {
-    color: rgba(255, 157, 0, 0.909);
+    color: #b6e2d3;
     text-decoration: none;
 }
 
 .landing {
-    background-image: url("https://images.unsplash.com/photo-1706585143532-2fb13f5af383?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-image: url("Recursos visuales/NUEVO\ FONDO.jpg");
+    background-size: cover; /* or 'contain' */
+    background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     padding: 30px 50px;
     height: 600px;
@@ -76,12 +84,12 @@ header {
 }
 
 .landing p {
-    width: 800px;
+    width: 550px;
     color: rgb(122, 122, 122);
 }
 
 .infolanding {
-    padding: 20px 0px;
+    padding: 200px 0px 100px 50px;
     align-items: center;
     justify-content: center;
 
@@ -117,13 +125,12 @@ header {
 /* CSS */
 .button-58 {
     align-items: center;
-    background-color: rgba(255, 157, 0, 0.909);
-    border: 2px solid rgb(255, 255, 255);
+    background-color:#b6e2d3;
     border-radius: 8px;
     box-sizing: border-box;
-    color: #fff;
+    color: #000000;
     cursor: pointer;
-    fill: rgba(255, 157, 0, 0.909);
+    fill:#b6e2d3;
     font-size: 16px;
     height: 48px;
     justify-content: center;
@@ -136,7 +143,7 @@ header {
 }
 
 .button-58:focus {
-    color: #fafafa;
+    color: #000000;
 }
 
 .button-58:hover {
@@ -177,7 +184,7 @@ header {
 }
 
 .project-card:hover {
-    background-color: rgba(255, 157, 0, 0.785);
+    background-color: #b6e2d3;
     scale: 1.01;
     cursor: pointer;
     color: white;
