--- a/main.css
+++ b/main.css
@@ -154,7 +154,9 @@ header {
 
 
 .portafolio {
-    background-image: url('https://images.unsplash.com/photo-1498805983167-a523078d762c?q=80&w=1822&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    width: 100%;
+    height: 1200px;
+    background-image: url("/Recursos visuales/NUEVO\ BG\ XCARD.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -167,6 +169,7 @@ header {
 .portafolio h1 {
     color: rgb(255, 255, 255);
 }
+
 
 .projects-container {
     display: grid;
@@ -248,7 +251,7 @@ header {
 }
 
 .separador p{
-    width: 1200px;
+    width: 100%;
     color: rgb(81, 81, 81);
 }
 
@@ -316,7 +319,7 @@ a{
 .footer-links a:active,
 .footer-links a:focus,
 .footer-links a:hover {
-    color: #3366cc;
+    color: #b3dfd0;
     text-decoration: none;
 }
 
@@ -398,7 +401,7 @@ a{
 .social-icons a:focus,
 .social-icons a:hover {
     color: #fff;
-    background-color: #29aafe
+    background-color: #b3dfd0
 }
 
 .social-icons.size-sm a {
